# autolink-egui

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/app/: state.rs  utils.rs
